--- a/index.html
+++ b/index.html
@@ -14,58 +14,36 @@
 <body>
   <form enctype="multipart/form-data">
     <div>
-      <input type="text" id="fullname" name="fullname" placeholder="RKBTYN">
+      <input type="text" id="fullname" name="fullname" placeholder="Клиент">
     </div>
     <div>
       <input type="file" id="photo" name="photo" accept="image/*">
     </div>
     <div id="error"></div>
     <div class="button-group">
-      <button type="button" id="submit">Отправить</button>
+      <button type="submit" id="submit">Отправить</button>
       <button type="reset" id="reset" style="margin-left: 10px">Отмена</button>
     </div>
   </form>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     let tg = window.Telegram.WebApp;
-    let submit = document.getElementById("submit");
     let reset = document.getElementById("reset");
     let photoInput = document.getElementById("photo");
 
-    submit.addEventListener("click", function() {
-      try {
-        const fullname = document.getElementById("fullname").value;
-        const file = photoInput.files[0];
-
-        if (file) {
-          const reader = new FileReader();
-          reader.onloadend = function() {
-            const photoBase64 = reader.result.split(',')[1];
-            const data = {
-              fullname: fullname,
-              photo: photoBase64 || "",
-            };
-
-            tg.sendData(JSON.stringify(data));
-            tg.close();
-          }
-          reader.readAsDataURL(file);
-        } else {
-          const data = {
-            fullname: fullname,
-            photo: "",
-          };
-
-          tg.sendData(JSON.stringify(data));
-          tg.close();
-        }
-      } catch (error) {
-        console.error("Ошибка при отправке данных:", error);
-      }
-    });
-
     reset.addEventListener("click", () => {
       tg.close();
+    });
+
+    photoInput.addEventListener("change", function(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onloadend = function() {
+          photoInput.dataset.base64 = reader.result.split(',')[1];
+        }
+        reader.readAsDataURL(file);
+      }
     });
   </script>
 </body>
