--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
   <form enctype="multipart/form-data" id="myForm">
     <div>
-      <input type="text" id="fullname" name="fullname" placeholder="КЛИЕНТ">
+      <input type="text" id="fullname" name="fullname" placeholder="Клиент">
     </div>
     <div>
       <input type="file" id="photo" name="photo" accept="image/*">
     </div>
     <div id="error"></div>
     <div class="button-group">
-      <button type="submit" id="submit">Отправить</button>
+      <button type="submit" id="submit" disabled>Отправить</button>
       <button type="reset" id="reset" style="margin-left: 10px">Отмена</button>
     </div>
   </form>
@@ -31,6 +31,7 @@
     let myForm = document.getElementById("myForm");
     let reset = document.getElementById("reset");
     let photoInput = document.getElementById("photo");
+    let submitButton = document.getElementById("submit");
 
     myForm.addEventListener("submit", function(event) {
       event.preventDefault(); // Prevent default form submission
@@ -76,6 +77,7 @@
         const reader = new FileReader();
         reader.onloadend = function() {
           photoInput.dataset.base64 = reader.result.split(',')[1];
+          submitButton.removeAttribute("disabled"); // Активируем кнопку
         }
         reader.readAsDataURL(file);
       }
